Functions for images and plotting detection

--- a/cogface/Database.ipynb
+++ b/cogface/Database.ipynb
@@ -2,12 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "3d547084",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pickle\n",
+    "from facenet_models import FacenetModel\n",
+    "import skimage.io as io\n",
+    "from camera import take_picture\n",
+    "%matplotlib notebook\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib.patches import Rectangle"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "id": "926de737",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
     "class Profile:\n",
     "    def __init__(self, name):\n",
     "        self.name = name\n",
@@ -26,19 +42,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pickle\n",
-    "import numpy as np\n",
-    "from facenet_models import FacenetModel\n",
-    "\n",
-    "#from profile import Profile\n",
+    "# from profile import Profile\n",
     "\n",
     "class Database:\n",
     "     \n",
-    "    #initialize database\n",
+    "    # initialize database\n",
     "    def __init__(self):\n",
     "        self.database = {}\n",
     "        self.model = FacenetModel()\n",
     "        \n",
+    "    # add image descriptor to profile, or create profile if it doesn't exist    \n",
     "    def add_image(self, name, img):\n",
     "        boxes, probabilities, landmarks = self.model.detect(img)\n",
     "        descriptor = self.model.compute_descriptors(img, boxes)\n",
@@ -48,7 +61,7 @@
     "            profile = Profile(name)\n",
     "            profile.add_descriptor(descriptor)\n",
     "            self.database[name] = profile\n",
-    "        \n",
+    "     \n",
     "    def remove_profile(self, name):\n",
     "        self.database.pop(name)\n",
     "        \n",
@@ -60,6 +73,7 @@
     "        with open(\"./database.pkl\", mode=\"wb\") as db:\n",
     "            pickle.dump(self.database, db)\n",
     "            \n",
+    "    # compare input to mean descriptors in database         \n",
     "    def find_match(self, descriptor):\n",
     "        #to change\n",
     "        cutoff = 0.3\n",
@@ -86,12 +100,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "475ab241",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# turn png/jpeg file into np array\n",
+    "def upload_picture(file_path):\n",
+    "    image = io.imread(file_path)\n",
+    "    if image.shape[-1] == 4:\n",
+    "    # Image is RGBA, where A is alpha -> transparency\n",
+    "    # Must make image RGB.\n",
+    "        image = image[..., :-1]  # png -> RGB\n",
+    "    return image"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
    "id": "d6a4fe2b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from camera import take_picture\n",
     "img_array = take_picture()"
    ]
   },
@@ -104,6 +134,35 @@
    "source": [
     "db = Database()\n",
     "db.add_image(\"Kat\", img_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a487f8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# plot image and label faces\n",
+    "def detect_faces(image):\n",
+    "    model = FacenetModel()\n",
+    "    boxes, probabilities, landmarks = model.detect(image)\n",
+    "    descriptor = model.compute_descriptors(image, boxes)\n",
+    "\n",
+    "    fig, ax = plt.subplots()\n",
+    "    ax.imshow(image)\n",
+    "\n",
+    "    for des, box, prob, landmark in zip(descriptor, boxes, probabilities, landmarks):\n",
+    "        # draw the box on the screen\n",
+    "        ax.add_patch(Rectangle(box[:2], *(box[2:] - box[:2]), fill=None, lw=2, color=\"red\"))\n",
+    "    \n",
+    "        # Get the landmarks/parts for the face in box d.\n",
+    "        # Draw the face landmarks on the screen.\n",
+    "        for i in range(len(landmark)):\n",
+    "            ax.plot(landmark[i, 0], landmark[i, 1], \"+\", color=\"blue\")\n",
+    "        \n",
+    "        # add name labels to each box\n",
+    "        plt.text(box[:2][0],box[:2][1], db.find_match(des),color=\"white\")"
    ]
   },
   {
@@ -1084,10 +1143,6 @@
     }
    ],
    "source": [
-    "%matplotlib notebook\n",
-    "import matplotlib.pyplot as plt\n",
-    "from matplotlib.patches import Rectangle\n",
-    "\n",
     "model = FacenetModel()\n",
     "boxes, probabilities, landmarks = model.detect(image)\n",
     "descriptor = model.compute_descriptors(image, boxes)\n",
@@ -1103,44 +1158,9 @@
     "    # Draw the face landmarks on the screen.\n",
     "    for i in range(len(landmark)):\n",
     "        ax.plot(landmark[i, 0], landmark[i, 1], \"+\", color=\"blue\")\n",
-    "        \n",
+    "\n",
     "    plt.text(box[:2][0],box[:2][1], db.find_match(des),color=\"white\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "a5a9744f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# reading an image file in as a numpy array\n",
-    "import skimage.io as io\n",
-    "\n",
-    "image = io.imread(\"/Users/KittyKat/Desktop/Screen Shot 2021-07-15 at 4.59.39 PM.png\")\n",
-    "if image.shape[-1] == 4:\n",
-    "    # Image is RGBA, where A is alpha -> transparency\n",
-    "    # Must make image RGB.\n",
-    "    image = image[..., :-1]  # png -> RGB"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "ccd2837f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "db.add_image(\"Joseph\", image)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8c92f306",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
