--- a/cogface/tester.ipynb
+++ b/cogface/tester.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "source": [
     "from whispers import whispers, create_dummy\n",
     "from node import plot_graph"
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "source": [
     "data = create_dummy(10)\n",
     "graph, adj_mat = whispers(data)\n",
@@ -46,7 +46,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "source": [
+    "import pickle\n",
+    "with open(r\"database.pkl\", mode=\"rb\") as db:\n",
+    "  self.database = pickle.load(db)"
+   ],
    "outputs": [],
    "metadata": {}
   }
