fix merge conflicts

--- a/cogface/Database.ipynb
+++ b/cogface/Database.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 213,
    "id": "3d547084",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 214,
    "id": "926de737",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 228,
    "id": "fdffcd08",
    "metadata": {},
    "outputs": [],
@@ -94,13 +94,17 @@
     "            dists.append(cos_distance(value.mean_descriptor, descriptor))\n",
     "            names.append(name)\n",
     "        if np.min(dists) < cutoff:\n",
+    "            print(names[np.argmin(dists)])\n",
+    "            print(len(self.database[names[np.argmin(dists)]].descriptors))\n",
+    "            self.database[names[np.argmin(dists)]].add_descriptor(descriptor)\n",
+    "            print(len(self.database[names[np.argmin(dists)]].descriptors))\n",
     "            return names[np.argmin(dists)]\n",
     "        return \"Unknown??\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 229,
    "id": "ba0b8ff0",
    "metadata": {},
    "outputs": [],
@@ -111,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 230,
    "id": "475ab241",
    "metadata": {},
    "outputs": [],
@@ -128,15 +132,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
-   "id": "77861952",
+   "execution_count": 231,
+   "id": "253930ff",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Dharshini': <__main__.Profile object at 0x0000024607C3AF40>, 'Hyojae': <__main__.Profile object at 0x00000246103EF550>, 'Joseph': <__main__.Profile object at 0x00000246103EF580>, 'Jacob': <__main__.Profile object at 0x00000246103EF490>, 'Kathryn': <__main__.Profile object at 0x00000246103EFF70>, 'Angelina': <__main__.Profile object at 0x00000246103EFBE0>}\n"
+      "{'Dharshini': <__main__.Profile object at 0x000002461552F8B0>, 'Hyojae': <__main__.Profile object at 0x000002460CD5F700>, 'Joseph': <__main__.Profile object at 0x000002460CD5F6D0>, 'Jacob': <__main__.Profile object at 0x000002460CD5FF70>, 'Kathryn': <__main__.Profile object at 0x000002460CD5FF10>, 'Angelina': <__main__.Profile object at 0x000002460CD5FEE0>}\n"
      ]
     }
    ],
@@ -149,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": 168,
-   "id": "e91764f6",
+   "id": "fdac1386",
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 169,
-   "id": "15fcb779",
+   "id": "2b87b004",
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 170,
-   "id": "b07c1166",
+   "id": "96c61649",
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 232,
    "id": "5a487f8c",
    "metadata": {},
    "outputs": [],
@@ -253,7 +257,7 @@
   {
    "cell_type": "code",
    "execution_count": 173,
-   "id": "d2b410ee",
+   "id": "5031beed",
    "metadata": {},
    "outputs": [
     {
@@ -275,8 +279,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
-   "id": "cbf14ce2",
+   "execution_count": 233,
+   "id": "bb5a9d8f",
    "metadata": {},
    "outputs": [
     {
@@ -1248,6 +1252,35 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jacob\n",
+      "5\n",
+      "6\n",
+      "Hyojae\n",
+      "5\n",
+      "6\n",
+      "Joseph\n",
+      "1\n",
+      "2\n",
+      "Kathryn\n",
+      "4\n",
+      "5\n",
+      "Dharshini\n",
+      "9\n",
+      "10\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Hello\\anaconda3\\envs\\week2\\lib\\site-packages\\numpy\\core\\_asarray.py:171: VisibleDeprecationWarning: Creating an ndarray from ragged nested sequences (which is a list-or-tuple of lists-or-tuples-or ndarrays with different lengths or shapes) is deprecated. If you meant to do this, you must specify 'dtype=object' when creating the ndarray.\n",
+      "  return array(a, dtype, copy=False, order=order, subok=True)\n"
+     ]
     }
    ],
    "source": [
@@ -1257,7 +1290,7 @@
   {
    "cell_type": "code",
    "execution_count": 205,
-   "id": "57cfb238",
+   "id": "e4842b71",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1267,7 +1300,7 @@
   {
    "cell_type": "code",
    "execution_count": 206,
-   "id": "d866ed63",
+   "id": "69e60d07",
    "metadata": {},
    "outputs": [
     {
@@ -2360,7 +2393,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "255af462",
+   "id": "c95e6105",
    "metadata": {},
    "outputs": [],
    "source": []
